[package]
name = "launcher"
version = "0.1.0"
authors = ["bender"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {version = "0.8.1", features = ["v3_16"]}
relm = "0.19.0"
relm-derive = "0.19.0"
fuzzy-matcher = "0.3.4"
xdg = "2.2.0"
gio = "0.8.1"
gdk = "0.12.1"


[lib]
name = "launcher_lib"
path = "src/lib/mod.rs"
test = true
crate-type=["lib"]


[[bin]]
name = "launcher"
